fix poll options (multiple) update

--- a/lib/admin/admin-topics-form/styles.styl
+++ b/lib/admin/admin-topics-form/styles.styl
@@ -32,6 +32,12 @@
     .form-group
       span.error
         top 30px
+      .kind-boolean
+        & > label
+          font-size: 1em
+        .title
+          font-weight: bold
+          line-height: 1.8
 
     .link-group
       span.error
