Add comment reference

--- a/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
@@ -5,6 +5,7 @@
   vertical-align middle
   .reply
     padding: 0
+    margin-left 2px
     color #337ab7
     &.active, &:active, &:hover
       color #286090
@@ -16,10 +17,10 @@
 
   .btn
     &.btn-xs
-      padding 5px
-      margin 0 5px
+      padding 3px
+      margin 0
       text-transform lowercase
-      font-size 70%
+      font-size 90%
       &:hover
         color #337ab7
 
