--- a/lib/site/topic-layout/topic-article/styles.styl
+++ b/lib/site/topic-layout/topic-article/styles.styl
@@ -132,3 +132,8 @@ topicColor2 = #999
         topicBoxSize*-1px topicBoxSize*-1px topicColor2
       }
     }
+
+@import './comments/list/comment/content/comment-ref/styles'
+
+.tooltip .tooltip-inner
+  max-width: 376px
