tooggle all replies

--- a/lib/site/topic-layout/topic-article/comments/list/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/styles.styl
@@ -1,3 +1,12 @@
+.list-actions
+  text-align: right
+  margin-bottom 5px
+  .btn-xs
+    font-size 13px
+    padding 3px
+    .fa
+      margin-left 3px
+
 .comments-list
   position: relative
   padding-bottom: 30px
