--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -10,15 +10,28 @@ section.featured
 
   .featured-card
     display block
-    margin 15px
-    width 40vw
-    height 20vw
-    box-shadow 0 1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24)
-    overflow hidden
-    color inherit
-    // transition all .3s unquote('cubic-bezier(.25,.8,.25,1)')
-    background-color #fff
     position relative
+    margin 15px
+    padding 15px 35px
+    width 45vw
+    height 20vw
+    overflow hidden
 
-    // &:hover
-    //   box-shadow 0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23)
+    .carousel
+      padding 15px 90px
+      .carousel-control
+        background transparent
+        color black
+      .carousel-indicators
+        bottom -30px
+        li
+          color rgba(0,0,0,.6)
+          border-color rgba(0,0,0,.6)
+          &.active
+            border-color rgba(0,0,0,.2)
+            background-color rgba(0,0,0,.6)
+
+    @import '../../topic-layout/topic-article/comments/list/comment/styles'
+
+    .carousel .comments-list-item
+      margin 5px
