--- a/lib/site/topic-layout/topic-article/styles.styl
+++ b/lib/site/topic-layout/topic-article/styles.styl
@@ -137,3 +137,11 @@ topicColor2 = #999
 
 .tooltip .tooltip-inner
   max-width: 376px
+
+a.btn-next
+  color: #3d699e
+  font-weight: bold
+  &:hover
+    text-decoration: none
+  .fa
+    margin-left: 7px
