Add duplicate forums actions

--- a/lib/admin/admin-general/styles.styl
+++ b/lib/admin/admin-general/styles.styl
@@ -7,11 +7,7 @@
     label.text-left
       text-align left
 
-    &.topicsAttrs
-      padding-top 3px
-      margin-bottom 3px
-      & > label
-        padding-top 6px
-
     &.actions
       margin-top 15px
+
+  @import '../../forum/topicsAttrs/styles'
