--- a/lib/header/styles.styl
+++ b/lib/header/styles.styl
@@ -16,7 +16,7 @@
   z-index: 1030
 
   &.with-contrast
-    box-shadow: 0 -1px 8px rgba(#d5d5d5, .8)
+    box-shadow: 0 -1px 8px rgba(#4A4A4A, .8)
 
   .logo
     float: left
