--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -211,7 +211,7 @@ label
 /* Site Content Container
 -------------------------------------------------- */
 .site-content
-  margin-top header_height
+  margin-top header_height - 6px
   background-color #fff
 
 /* Signin page
