--- a/lib/system/forums/styles.styl
+++ b/lib/system/forums/styles.styl
@@ -6,6 +6,15 @@
   .forum-name
     color #666666
 
+#forum-wrapper
+  .form-horizontal
+    label.control-label.text-left
+      text-align left
+    .form-group.actions
+      margin-top 15px
+
+  @import '../../forum/topicsAttrs/styles'
+
 .subdomain
   .input-group-addon
     .mobile
