--- a/lib/error-pages/styles.styl
+++ b/lib/error-pages/styles.styl
@@ -1,11 +1,11 @@
 #content-404
   position: absolute
-  background-color: #51394a
+  background-color: #4A4A4A
   width: 100%
   min-height: 100%
 
   .container-404
-    width: 430px
+    width: 480px
     margin: 0 auto
     padding-top: 160px
     overflow: hidden
