--- a/lib/settings/forum-new/forum-form/template.jade
+++ b/lib/settings/forum-new/forum-form/template.jade
@@ -2,7 +2,7 @@ main.container
   .row
     article.forum-new-form.col-xs-12.col-md-8.col-md-offset-2
       .forum-top
-        h1.forum-title= t('forum.form.title')
+        h1.forum-title= t('forum.form.title.create')
 
       form.form(action="/api/forum", method="post", role="form", novalidate, autovalidate, autosubmit)
         ul.form-errors
