--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -1,12 +1,13 @@
 #forum-wrapper.content-wrapper
   .forum-admin
-    h3=t('forum.form.title')
+    h3=t(form.title)
     form.form-horizontal(action=form.action, method='post', role='form', autocomplete='off', autovalidate='autovalidate', autosubmit='autosubmit')
+      input(type='hidden', id='source', name='source', value=(forum ? forum.id : ''))
       ul.form-messages
       .form-group
         label.col-sm-2.control-label(for='title') #{t('forum.form.title.label')}
         div.col-sm-10
-          input.form-control(type='text', validate='required', id='title', name='title', placeholder=t('forum.form.title.placeholder'))
+          input.form-control(type='text', validate='required', id='title', name='title', value=forum ? forum.title : '', placeholder=t('forum.form.title.placeholder'))
       .form-group
         label.col-sm-2.control-label(for='name') #{t('forum.form.url.label')}
         div.col-sm-10
@@ -14,17 +15,18 @@
             div.input-group-addon
               span.desktop #{config.protocol}://#{config.host}/
               span.mobile /
-            input.form-control(type='text', name='name', validate='required forum', autofocus, id='name', autocorrect='off', autocapitalize='off')
+            input.form-control(type='text', name='name', value=(forum ? (forum.name + t('forum.form.copy-suffix')) : ''), validate='required forum', autofocus, id='name', autocorrect='off', autocapitalize='off')
           span.error.name-unavailable.hide=t('forum.form.url.unavailable')
       .form-group
         label.col-sm-2.control-label(for='summary') #{t('forum.form.summary.label')}
         div.col-sm-10
-          input.form-control(type='text', id='summary', name='summary',maxlength=300, validate='max-length:300', placeholder=t('forum.form.summary.placeholder'))
+          input.form-control(type='text', id='summary', name='summary', value=forum ? forum.summary : '', maxlength=300, validate='max-length:300', placeholder=t('forum.form.summary.placeholder'))
       .form-group
         label.col-sm-2.control-label(for='cover') #{t('forum.form.cover')}
         div.col-sm-10
-          input.form-control(type='text', id='cover', name='cover', validate='url', placeholder=t('admin-topics-form.placeholder.cover'))
-      .form-group
+          input.form-control(type='text', id='cover', name='cover', value=forum ? forum.coverUrl : '', validate='url', placeholder=t('admin-topics-form.placeholder.cover'))
+      include ../../forum/topicsAttrs/form.jade    
+      .form-group.actions
         div.col-sm-offset-2.col-sm-10
           button.btn.btn-success
             i.glyphicon.glyphicon-plus
