--- a/lib/system/forums/item.jade
+++ b/lib/system/forums/item.jade
@@ -5,11 +5,14 @@ div.list-group-item.clearfix
     - if (forum.privileges.canChangeTopics)
       a.btn.btn-link(href='#{forum.url}/admin')
         i.fa.fa-lg.fa-wrench
+    - if (user.privileges.canCreate)
+      a.btn.btn-link(href=urlBuilder.for('system.forums.copy', {forum: forum.name}))
+        i.fa.fa-lg.fa-clone
     - if (forum.privileges.canDelete)
       button.btn.btn-link(type='button',data-toggle='modal',data-target='#forum-delete-modal-#{forum.id}')
         i.fa.fa-lg.fa-trash.text-danger
   h4.list-group-item-heading
-     a(href=forum.url).forum-title #{forum.title}
+     a(href=(forum.privileges.canChangeTopics ? forum.url + '/admin' : forum.url)).forum-title #{forum.title}
   p.small
     a(href=forum.url)
       | &nbsp;
