--- a/lib/site/topic-layout/topic-article/styles.styl
+++ b/lib/site/topic-layout/topic-article/styles.styl
@@ -145,3 +145,20 @@ a.btn-next
     text-decoration: none
   .fa
     margin-left: 7px
+
+.modal-backdrop.in
+  opacity: .5
+
+.topic-modal
+  position absolute
+  top 50%
+  left 50%
+  transform translate(-50%, -50%) !important
+  &.modal.in .modal-dialog
+    transform: translate(0,0)
+    .lead
+      text-align justify
+      font-size 1em
+      font-weight 400
+      padding 20px
+      margin-bottom 0
