--- a/lib/header/styles.styl
+++ b/lib/header/styles.styl
@@ -76,15 +76,13 @@
   #toggleButton
     display block
     float left
+    color inherit
     background none
     border none
-    color inherit
-    padding .5rem 0
-    margin-right 10px
-    outline: none
-    position: relative
-    .icon-menu
-      font-size 22px
+    cursor pointer
+    padding 0 10px
+    font-size 22px
+    height 54px
     &:hover
       cursor: pointer
     &::before
