--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -55,6 +55,45 @@ section.featured
         0 1px 3px rgba(0,0,0,.12),
         0 1px 2px rgba(0,0,0,.24)
 
+      .indicators
+        display none
+        float right
+        margin-top 3px
+        color #337ab7
+
+      &:hover, &:focus, &:active
+        .indicators
+          display inline-block
+
+    .comments-dropdown
+      position: absolute
+      top: 13px
+      right: 0
+      background: #fff
+      border-radius: 2px
+      border: 1px solid #ccc
+      box-shadow: 0 1px 3px rgba(0,0,0,.12)
+      padding: 5px 0
+      font-size: .8em
+      z-index: 1
+
+      button
+        cursor: pointer
+        border: 0
+        background: transparent
+        font-size: 13px
+        display: block
+        margin: 0 auto
+        padding: 5px 10px
+        width: 100%
+        color: #666
+        text-align: right
+        white-space: nowrap
+        font-weight: 100
+
+        &:hover
+          background-color: #f0f0f0
+
     .carousel
       padding 15px 90px
       .carousel-control
