--- a/lib/system/forums/view.jade
+++ b/lib/system/forums/view.jade
@@ -9,9 +9,9 @@
           - if (user.privileges.canCreate)
             a.btn.btn-success(href=urlBuilder.for('system.forums.create'), title=t('system.list.add'))
               i.glyphicon.glyphicon-plus
-          - if (config.generatorEnabled)
-            button.btn.btn-info(type='submit',name='ipsum')
-            i.glyphicon.glyphicon-flash
+          //- - if (config.generatorEnabled)
+          //-   button.btn.btn-info(type='submit',name='ipsum')
+          //-   i.glyphicon.glyphicon-flash
     ul.form-messages
   .list.list-group
   
