--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -16,7 +16,9 @@
         label.col-sm-2.control-label(for='coverUrl')
           = t('forum.form.cover')
         div.col-sm-10
-          input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
+          input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url' readonly)
+          div.col-sm-5
+          div.uploadImg 
       include ../../forum/topicsAttrs/form.jade     
       .form-group.actions
         div.col-sm-offset-2.col-sm-10
