--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -24,7 +24,7 @@
       .form-group
         label.col-sm-2.control-label(for='cover') #{t('forum.form.cover')}
         div.col-sm-10
-          input.form-control(type='text', id='cover', name='cover', value=forum ? forum.coverUrl : '', validate='url', placeholder=t('admin-topics-form.placeholder.cover'))
+          input.form-control(type='text', id='cover', name='cover', value=forum ? forum.coverUrl : '', validate='url', placeholder=t('admin-topics-form.placeholder.cover') readonly)
        div.uploadImg 
       include ../../forum/topicsAttrs/form.jade    
       .form-group.actions
