Saving file  after validating the form

--- a/lib/settings/settings-profile/template.jade
+++ b/lib/settings/settings-profile/template.jade
@@ -25,7 +25,7 @@
             //- a(href='https://gravatar.com', target='_blank')
             //-   = t('settings.change-at-gravatar') + ' '
             //-   i.icon-share-alt
-            input.form-control(type='text', id='profilePic' name='profilePictureUrl', maxlength=200, placeholder=t('settings.paste-url-image'), value='#{user.avatar}', validate='url' readonly)
+            input.form-control(type='hidden', id='profilePic' name='profilePictureUrl', maxlength=200, placeholder=t('settings.paste-url-image'), value='#{user.avatar}', validate='url' readonly)
             div.uploadImg  
       hr
       
