--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -16,7 +16,7 @@
         label.col-sm-2.control-label(for='coverUrl')
           = t('forum.form.cover')
         div.col-sm-10
-          input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url' readonly)
+          input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
           div.uploadImg
       include ../../forum/topicsAttrs/form.jade     
       .form-group.actions
