--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -95,10 +95,18 @@ section.featured
           background-color: #f0f0f0
 
     .carousel
-      padding 15px 90px
+      padding 15px 0px
+
       .carousel-control
         background transparent
         color black
+
+        &.left 
+          left: -35px;          
+
+        &.right 
+          right: -35px;          
+
       .carousel-indicators
         bottom -30px
         li
