--- a/lib/site/home-forum/topic-card/styles.styl
+++ b/lib/site/home-forum/topic-card/styles.styl
@@ -21,11 +21,12 @@
     &:after
       content ''
       display block
-      padding-top 65%
+      padding-top 60%
 
   h3
     font-weight 100
     margin 10px 10px 40px
+    min-height 102px
 
   .participants
     position absolute
