--- a/lib/site/topic-layout/styles.styl
+++ b/lib/site/topic-layout/styles.styl
@@ -4,7 +4,7 @@
 
 #root, #outer-layout
   min-height 100%
-  background-color #f9f9f9
+  background-color white
 
 @import './sidebar/styles'
 @import './topic-article/styles'
