--- a/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
@@ -5,10 +5,14 @@
   vertical-align middle
   .reply
     padding: 0
+    padding-left: 5px
+    padding-top: 10px
     margin-left 2px
     color #337ab7
+
     &.active, &:active, &:hover
       color #286090
+
     span.fa-stack
       font-size 65%
       display: inline-block
@@ -50,13 +54,15 @@
 
   .votes
     .btn-xs
-      margin 0 5px 0 0
+      margin 0 5px 3px 0
       padding 5px 10px
       text-transform uppercase
       border 1px solid transparent
       background: transparent
       font-weight bold
       font-size 70%
+      min-width 82.2px
+
       .score
         margin-left 1em
       &.disabled
