--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -1,149 +1,178 @@
-section.featured
+#home-featured
+  section.featured
 
-  display flex
-  flex-wrap wrap
-  justify-content center
-  max-width 790px
-  margin 0 auto
-  margin-bottom:  50px
-  background-color: #f9f9f9
+    display flex
+    flex-wrap wrap
+    justify-content center
+    margin 0 auto
+    margin-bottom:  50px
+    background-color: #f9f9f9
 
-  .nav-tabs, .nav-pills
-    &>li>a
-      font-size: .8em
-      font-weight normal
-      // padding: 0 10px 0 0
-      text-transform: capitalize
+    .nav-tabs, .nav-pills
+      &>li>a
+        font-size: .8em
+        font-weight normal
+        // padding: 0 10px 0 0
+        text-transform: capitalize
 
-  .nav-pills
-    &>li
-      margin-left:  0px
-    &>li>a
-      color #3879B5
-      background-color white
-      border 1px solid #3879B5
+    .nav-pills
+      &>li
+        margin-left:  0px
+      &>li>a
+        color #3879B5
+        background-color white
+        border 1px solid #3879B5
 
-    &>li.active>a
-      background-color #3879B5
-      color white
-      font-weight bold
-      box-shadow:
-        0 1px 3px rgba(0,0,0,.12),
-        0 1px 2px rgba(0,0,0,.24)
+      &>li.active>a
+        background-color #3879B5
+        color white
+        font-weight bold
+        box-shadow:
+          0 1px 3px rgba(0,0,0,.12),
+          0 1px 2px rgba(0,0,0,.24)
 
-  &.loading
-    min-height 60px
-    .loader-wrapper .topic-loader
-      top: 15px
+    &.loading
+      min-height 60px
+      .loader-wrapper .topic-loader
+        top: 15px
 
-  .description
-    padding-bottom 0
-    text-align center
+    .description
+      padding-bottom 0
+      text-align center
+      width: 100%
 
-    p
-      font-size:  1.1em
+      p
+        font-size:  1.1em
 
-      &:last-child
-        margin-bottom 0
+        &:last-child
+          margin-bottom 0
 
-    h2 
-      font-style:   normal
-      font-size:    1.4em
+      h2 
+        font-style:   normal
+        font-size:    1.4em
 
-  .featured-card
-    display block
-    position relative
-    margin 5px
-    padding 15px 15px
-    padding-top 0px
-
-    .topic-header
+    .featured-card
+      display block
+      position relative
       margin 5px
-      padding 7px 15px
-      background-color white
-      color rgba(0,0,0,0.8)
-      font-weight bold
-      box-shadow:
-        0 1px 3px rgba(0,0,0,.12),
-        0 1px 2px rgba(0,0,0,.24)
+      padding 15px 15px
+      padding-top 0px
 
-      .indicators
-        display none
-        float right
-        margin-top 3px
-        color #337ab7
-
-      &:hover, &:focus, &:active
-        .indicators
-          display inline-block
-
-    .comments-dropdown
-      position: absolute
-      top: 13px
-      right: 0
-      background: #fff
-      border-radius: 2px
-      border: 1px solid #ccc
-      box-shadow: 0 1px 3px rgba(0,0,0,.12)
-      padding: 5px 0
-      font-size: .8em
-      z-index: 1
-
-      button
-        cursor: pointer
-        border: 0
-        background: transparent
-        font-size: 13px
-        display: block
-        margin: 0 auto
-        padding: 5px 10px
-        width: 100%
-        color: #666
-        text-align: right
-        white-space: nowrap
-        font-weight: 100
-
-        &:hover
-          background-color: #f0f0f0
-
-    .carousel
-      padding 15px 0px
-
-      .carousel-control
-        background transparent
-        color black
-        width:  20px
-
-        &.left 
-          left: -16px
-
-        &.right 
-          right: -16px
-
-      .carousel-indicators
-        bottom -30px
-        li
-          color rgba(0,0,0,.6)
-          border-color rgba(0,0,0,.6)
-          &.active
-            border-color rgba(0,0,0,.2)
-            background-color rgba(0,0,0,.6)
-
-    @import '../../topic-layout/topic-article/comments/list/comment/styles'
-
-    .carousel
-      height: auto
-      transition: height .6s ease-in-out
-
-      .comments-list-item
+      .topic-header
         margin 5px
+        padding 7px 15px
+        background-color white
+        color rgba(0,0,0,0.8)
+        font-weight bold
+        box-shadow:
+          0 1px 3px rgba(0,0,0,.12),
+          0 1px 2px rgba(0,0,0,.24)
 
-      .carousel-inner
-        & > .item
-          transition: all .6s ease-in-out
+        .indicators
+          display none
+          float right
+          margin-top 3px
+          color #337ab7
 
-          &.active
-            opacity: 1
+        &:hover, &:focus, &:active
+          .indicators
+            display inline-block
 
-          &.next, &.prev
-            opacity: 0
+      .comments-dropdown
+        position: absolute
+        top: 13px
+        right: 0
+        background: #fff
+        border-radius: 2px
+        border: 1px solid #ccc
+        box-shadow: 0 1px 3px rgba(0,0,0,.12)
+        padding: 5px 0
+        font-size: .8em
+        z-index: 1
+
+        button
+          cursor: pointer
+          border: 0
+          background: transparent
+          font-size: 13px
+          display: block
+          margin: 0 auto
+          padding: 5px 10px
+          width: 100%
+          color: #666
+          text-align: right
+          white-space: nowrap
+          font-weight: 100
+
+          &:hover
+            background-color: #f0f0f0
+
+      .carousel
+        padding 15px 0px
+
+        .carousel-control
+          background transparent
+          color black
+          width:  20px
+
+          &.left 
+            left: -16px
+
+          &.right 
+            right: -16px
+
+          @media (min-width: 760px)
+            &.left 
+              left: -30px
+
+            &.right 
+              right: -30px
+
+        .carousel-indicators
+          bottom -30px
+          li
+            color rgba(0,0,0,.6)
+            border-color rgba(0,0,0,.6)
+            &.active
+              border-color rgba(0,0,0,.2)
+              background-color rgba(0,0,0,.6)
+
+      @import '../../topic-layout/topic-article/comments/list/comment/styles'
+
+      .carousel
+        height: auto
+        transition: height .6s ease-in-out
+
+        .comments-list-item
+          margin 5px
+
+        .carousel-inner
+          & > .item
+            transition: all .6s ease-in-out
+
+            &.active
+              opacity: 1
+
+            &.next, &.prev
+              opacity: 0
+
+  @media (min-width: 1272px)
+    display:  flex
+    justify-content: center
+
+    section.featured
+      max-width:  calc(50% - 30px);
+
+      .featured-card
+
+        .carousel
+          padding 15px 20px
+
+          .carousel-control
+            width: 30px
+
+            &.left 
+              left: -16px
+
+            &.right 
+              right: -16px
