--- a/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
+++ b/lib/site/topic-layout/topic-article/comments/list/comment/footer/styles.styl
@@ -10,6 +10,9 @@
     margin-left 2px
     color #337ab7
 
+    @media (min-width: 1272px)
+      padding-top: 0px
+
     &.active, &:active, &:hover
       color #286090
 
@@ -62,6 +65,9 @@
       font-weight bold
       font-size 70%
       min-width 82.2px
+
+      @media (min-width: 1272px)
+        margin-bottom:  0px
 
       .score
         margin-left 1em
