--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -47,7 +47,7 @@
         &:last-child
           margin-bottom 0
 
-      h2 
+      h2
         font-style:   normal
         font-size:    1.4em
 
@@ -57,6 +57,9 @@
       margin 5px
       padding 15px 15px
       padding-top 0px
+
+      .featured-error
+        height: auto
 
       .topic-header
         margin 5px
@@ -115,17 +118,17 @@
           color black
           width:  20px
 
-          &.left 
+          &.left
             left: -16px
 
-          &.right 
+          &.right
             right: -16px
 
           @media (min-width: 760px)
-            &.left 
+            &.left
               left: -30px
 
-            &.right 
+            &.right
               right: -30px
 
         .carousel-indicators
@@ -171,8 +174,8 @@
           .carousel-control
             width: 30px
 
-            &.left 
+            &.left
               left: -16px
 
-            &.right 
+            &.right
               right: -16px
