UX fixes (vertical align + ie11)

--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -1,31 +1,36 @@
 #home-featured
+  background-color: #f9f9f9
   section.featured
 
     display flex
-    flex-wrap wrap
-    justify-content center
-    margin 0 auto
-    margin-bottom:  50px
-    background-color: #f9f9f9
+    // flex-wrap wrap
+    flex-direction column
+    justify-content flex-start
+
+    margin 0 auto 50px
+    padding 5px 25px
+
+
+    .description, .featured-mono, #featured-tabs
+      width 100%
+      display flex
+      flex-wrap wrap
+      justify-content center
 
     .nav-tabs, .nav-pills
       &>li>a
         font-size: .8em
         font-weight normal
-        // padding: 0 10px 0 0
-        text-transform: capitalize
 
     .nav-pills
       &>li
         margin-left:  0px
       &>li>a
-        color #3879B5
-        background-color white
-        border 1px solid #3879B5
+        color #666
 
       &>li.active>a
-        background-color #3879B5
-        color white
+        background-color white
+        color rgba(0,0,0,0.8)
         font-weight bold
         box-shadow:
           0 1px 3px rgba(0,0,0,.12),
@@ -37,9 +42,12 @@
         top: 15px
 
     .description
-      padding-bottom 0
+      padding 5px 42px 0
+      font-size: 90%
       text-align center
-      width: 100%
+      width 100%
+      vertical-align top
+      flex-shrink 1
 
       p
         font-size:  1.1em
@@ -51,15 +59,23 @@
         font-style:   normal
         font-size:    1.4em
 
+    .featured-mono, .tab-content
+      width 100%
+      flex-grow 1
+
+
     .featured-card
       display block
       position relative
-      margin 5px
+      width 100%
       padding 15px 15px
       padding-top 0px
+      flex-grow 1
 
-      .featured-error
-        height: auto
+      & > .alert
+        margin 15px auto 0
+        max-width 250px
+        text-align center
 
       .topic-header
         margin 5px
@@ -72,14 +88,18 @@
           0 1px 2px rgba(0,0,0,.24)
 
         .indicators
-          display none
+          display inline-block
           float right
-          margin-top 3px
           color #337ab7
+          .btn-sm
+            font-size 0.8rem
+            vertical-align middle
 
         &:hover, &:focus, &:active
           .indicators
-            display inline-block
+            color #286090
+            .btn-link
+              text-decoration none
 
       .comments-dropdown
         position: absolute
@@ -160,11 +180,12 @@
               opacity: 0
 
   @media (min-width: 1272px)
-    display:  flex
-    justify-content: center
+    display flex
+    // justify-content: center
 
     section.featured
-      max-width:  calc(50% - 30px);
+      width:  calc(50% - 30px);
+      padding 5px 0
 
       .featured-card
 
