--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -130,6 +130,27 @@
           &:hover
             background-color: #f0f0f0
 
+      .bottom-actions
+        margin-top 12px
+        padding 0 25px
+
+        .btn-link.highlight
+          color rgba(0,0,0,0.65)
+          border 1px solid rgba(0,0,0,0.65)
+          background-color white
+          box-shadow:
+            0 1px 3px rgba(0,0,0,.12),
+            0 1px 2px rgba(0,0,0,.24)
+
+          &.btn-sm
+            font-size 0.8rem
+
+          &:hover, &:focus, &:active
+            border-color rgba(0,0,0,0.8)
+            color rgba(0,0,0,0.8)
+            text-decoration none
+
+
       .carousel
         padding 15px 0px
 
