--- a/lib/site/home-forum/featured/styles.styl
+++ b/lib/site/home-forum/featured/styles.styl
@@ -1,5 +1,7 @@
 #home-featured
+
   background-color: #f9f9f9
+
   section.featured
 
     display flex
@@ -9,7 +11,6 @@
 
     margin 0 auto 50px
     padding 5px 25px
-
 
     .description, .featured-mono, #featured-tabs
       width 100%
@@ -58,6 +59,20 @@
       h2
         font-style:   normal
         font-size:    1.4em
+
+    .fixed-height
+      height auto
+      @media (min-width: 560px)
+        height 4.8rem
+      @media (min-width: 1400px)
+        height 3.2rem
+
+    #featured-tabs .nav[role="tablist"]
+      height auto
+      @media (min-width: 1272px)
+        height 4.8rem
+      @media (min-width: 1400px)
+        height 3.2rem
 
     .featured-mono, .tab-content
       width 100%
@@ -150,7 +165,6 @@
             color rgba(0,0,0,0.8)
             text-decoration none
 
-
       .carousel
         padding 15px 0px
 
@@ -164,6 +178,10 @@
 
           &.right
             right: -16px
+
+          .glyphicon-chevron-left, .glyphicon-chevron-right,
+          .icon-next, .icon-prev
+            top 125px
 
           @media (min-width: 760px)
             &.left
