--- a/lib/admin/admin-topics-form/template.jade
+++ b/lib/admin/admin-topics-form/template.jade
@@ -58,7 +58,7 @@
           label= t('admin-topics-form.label.coverUrl')
           - if (te('admin-topics-form.description.coverUrl'))
             span.help-text= t('admin-topics-form.description.coverUrl')
-          input.form-control(type='hidden', maxlength='254', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.coverUrl'), value=topic.coverUrl, validate='url' readonly)
+          input.form-control(type='hidden', id='coverUrl', name='coverUrl', value=topic.coverUrl)
           div.uploadImg 
         .form-group
           - var pollOpen = !!(topic.action && topic.action.count > 0)
