--- a/lib/settings/settings-profile/styles.styl
+++ b/lib/settings/settings-profile/styles.styl
@@ -9,22 +9,15 @@
 
     .profile-picture-form
       display: flex
+      flex-direction: column
       align-items: center
 
     .image-container
       width: 65px
-      margin-right: 10px
+      margin: 5px auto 15px
 
       img
         border-radius: 2px
 
     .controls
       flex-grow: 2
-
-      & > *
-        display: block
-
-      a
-        font-size: .8em
-        margin-bottom: 8px
-        font-weight: normal
