--- a/lib/settings/settings/styles.styl
+++ b/lib/settings/settings/styles.styl
@@ -39,6 +39,15 @@
     form
       max-width 350px
 
+    .fileUploader
+      width 100%
+      .input-group-btn > .btn
+        padding 9px 12px
+      .input-group .form-control:first-child
+        border-radius 2px 0 0 2px
+      .input-group-btn:last-child > .btn
+        border-radius 0 2px 2px 0
+
 @media only screen and (min-width  320px) and (max-width  700px)
   //Mobile max width
   #settings-container #settings .settings-content
