uploader : add `withCover` mode

--- a/lib/admin/admin-topics-form/styles.styl
+++ b/lib/admin/admin-topics-form/styles.styl
@@ -45,6 +45,9 @@
         right 20px
     .forum-tag
       margin-right: 5px
+    img.uploadPicture
+      height 169px
+      width: auto
 
   .publish-status
     p
