--- a/lib/common/uploader/styles.styl
+++ b/lib/common/uploader/styles.styl
@@ -6,22 +6,25 @@
     border-top-right-radius 4px
     border-bottom-right-radius 4px
 
-.coverWrapper
+.deleteImage
+  border-radius 50%
+  font-size 15px
+  color #F44336
+  width 15px
+  height 15px
+  text-align center
+  line-height 15px
+  cursor pointer
+
+.coverWrapper, .uploadPictureContainer
   .deleteImage
     position absolute
     top 9px
     right 24px
-    font-size 15px
-    color #F44336
-    width 15px
-    height 15px
-    text-align center
-    line-height 15px
     cursor pointer
     &:hover
       color: white
       box-shadow 2px 2px 3px 0 rgba(0, 0, 0, 0.05)
-
 
   .coverContainer
     background-size cover
@@ -30,6 +33,24 @@
     height 100px
     margin-bottom 10px
     box-shadow 2px 2px 3px 0 rgba(0, 0, 0, 0.05)
+
+
+.uploadPictureContainer
+  display: flex
+  flex-direction: column
+
+  .deleteImage
+    color #3f4257
+    top: 5px
+    right: 5px
+    &:hover
+      color #F44336
+
+  img.uploadPicture
+    width 40%
+    align-items: center
+    margin: 5px auto
+
 
 .fileContainer
   background #fff
@@ -115,15 +136,6 @@
     position absolute
     top -9px
     right -9px
-    font-size 8px
-    color #fff
-    background #ff4081
-    border-radius 50%
-    width 15px
-    height 15px
-    text-align center
-    line-height 15px
-    cursor pointer
 
 .flipMove
   display flex
