--- a/lib/settings/settings-profile/styles.styl
+++ b/lib/settings/settings-profile/styles.styl
@@ -7,17 +7,8 @@
   .profile-picture
     margin-bottom: 12px
 
-    .profile-picture-form
-      display: flex
-      flex-direction: column
-      align-items: center
-
-    .image-container
+    img
+      border-radius: 2px
       width: 65px
-      margin: 5px auto 15px
-
-      img
-        border-radius: 2px
-
-    .controls
-      flex-grow: 2
+      align-items: center
+      margin: 5px auto
