--- a/lib/admin/admin-sidebar/sidebar-template.jade
+++ b/lib/admin/admin-sidebar/sidebar-template.jade
@@ -5,8 +5,10 @@ ul.admin-menu.nav.nav-pills.nav-stacked(class=forum.privileges.canChangeTopics ?
     li: a(href=urlBuilder.for('admin.permissions', {forum: forum.name}) data-section='permissions')=t('admin-sidebar.permissions.title')
   - if (forum.privileges.canCreateTopics)
     li: a(href=urlBuilder.for('admin.topics', {forum: forum.name}) data-section='topics')=t('admin-sidebar.topics.title')
-  //- - if (user.staff)
-  //-   li: a(href=urlBuilder.for('admin.tags', {forum: forum.name}) data-section='tags')=t('admin-sidebar.tags.title')
+  //- - if (forum.privileges.canCreateTopics)
+  //-   li: a(href=urlBuilder.for('admin.forum.edit', {forum: forum.name}) data-section='edit-forum')=t('admin-sidebar.edit-forum.title')
+  - if (user.staff)
+    li: a(href=urlBuilder.for('admin.tags', {forum: forum.name}) data-section='tags')=t('admin-sidebar.tags.title')
   - if (forum.privileges.canChangeTopics)
     li: a(href=urlBuilder.for('admin.comments', {forum: forum.name}) data-section='comments')=t('admin-sidebar.comments.title')
   //- - if (forum.privileges.canChangeTopics)
