--- a/lib/admin/admin-topics-form/styles.styl
+++ b/lib/admin/admin-topics-form/styles.styl
@@ -125,5 +125,15 @@
   font-size: .8em
   color: #666
   margin: 0 0 .3em
-
+.form-messages
+  .msg
+    color darken(#27ae60, 50%)
+    border-color #27ae60
+    background-color lighten(#27ae60, 70%)
+    padding: 20px 0px 20px 35px
+    width: 40%
+    border-radius: 8px
+    list-style-type: none
+    margin: auto
+    
 @import '../../node_modules/tags-input/tags-input.css'
