--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -17,7 +17,12 @@
           = t('forum.form.cover')
         div.col-sm-10
           input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
-      include ../../forum/topicsAttrs/form.jade     
+      include ../../forum/topicsAttrs/form.jade   
+      .form-group
+        div.col-sm-2.text-right
+          input(type='checkbox', id='featuredSection', name='featuredSection', checked=forum ? forum.featuredSection : false)
+        label.col-sm-10.control-label.text-left(for='featuredSection')
+          = t('forum.form.FeaturedSection')   
       .form-group.actions
         div.col-sm-offset-2.col-sm-10
           button.btn.btn-success
