Add associationName and creationReason inputs on forum. Add the possibility of publishind and depublishing forums by staff members only

--- a/lib/admin/admin-general/styles.styl
+++ b/lib/admin/admin-general/styles.styl
@@ -9,5 +9,8 @@
 
     &.actions
       margin-top 15px
+  .commands
+      width 70%
+      padding-left 35%  
 
   @import '../../forum/topicsAttrs/styles'
