--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -5,6 +5,14 @@
       input(type='hidden', id='source', name='source', value=(forum ? forum.id : ''))
       ul.form-messages
       .form-group
+        label.col-sm-2.control-label(for='associationName') #{t('forum.form.associationName.label')}
+        div.col-sm-10
+          input.form-control(type='text', id='associationName', name='associationName',value=forum ? forum.associationName : '', placeholder=t('forum.form.associationName.placeholder'), validate='required')
+      .form-group
+        label.col-sm-2.control-label(for='creationReason') #{t('forum.form.creationReason.label')}
+        div.col-sm-10
+          textarea.form-control( id='creationReason', name='creationReason', placeholder=t('forum.form.creationReason.placeholder'), validate='required')
+      .form-group
         label.col-sm-2.control-label(for='title') #{t('forum.form.title.label')}
         div.col-sm-10
           input.form-control(type='text', validate='required', id='title', name='title', value=forum ? forum.title : '', placeholder=t('forum.form.title.placeholder'))
