--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -31,7 +31,8 @@
         label.col-sm-2.control-label(for='coverUrl')
           = t('forum.form.cover')
         div.col-sm-10
-          input.form-control(type='text', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
+          input.form-control(type='hidden', id='coverUrl', name='coverUrl', placeholder=t('admin-topics-form.placeholder.cover'), value=forum.coverUrl, validate='url')
+          div.uploadImg 
       include ../../forum/topicsAttrs/form.jade   
       .form-group
         div.col-sm-2.text-right
