--- a/lib/system/uploads/styles.styl
+++ b/lib/system/uploads/styles.styl
@@ -1,2 +1,55 @@
 h1
     margin-left 40%
+
+#images 
+      display flex
+      flex-wrap wrap
+      justify-content space-between
+#imagename 
+        margin-top 20px
+        width 300
+        height 250
+#fileName 
+        margin 25px
+#deleteOne
+        background-color #d9534f
+        color #fff
+        border-color #d43f3a
+        display inline-block
+        padding 6px 12px
+        margin-bottom 0
+        font-size 14px
+        font-weight 400
+        line-height 1.42857143
+        text-align center
+        cursor pointer
+        width 150
+        margin-top 20px
+#deleteAll 
+        background-color #d9534f
+        color #fff
+        border-color #d43f3a
+        display inline-block
+        padding 6px 12px
+        margin-bottom 0
+        font-size 14px
+        font-weight 400
+        line-height 1.42857143
+        text-align center
+        cursor pointer
+        width 300
+        margin-left 50px
+#successButton
+      background-color #5cb85c
+      color #fff
+      border-color #4cae4c
+      display inline-block
+      padding 6px 12px
+      margin-bottom 0
+      font-size 14px
+      font-weight 400
+      line-height 1.42857143
+      text-align center
+      cursor pointer
+      width 300
+      margin-left 150px        
