--- a/lib/system/container.jade
+++ b/lib/system/container.jade
@@ -11,5 +11,7 @@
         li: a(href=urlBuilder.for('system.user-badges')) #{t('system.user-badges')}
       - if (user.privileges && user.staff && user.privileges.canManage)
         li: a(href=urlBuilder.for('system.upload')) #{t('system.upload')}
+      - if (user.privileges && user.privileges.canManage)
+        li: a(href=urlBuilder.for('system.groups')) #{t('system.group')}
   .content.col-md-10
     #system-content
