Adding check on group while creating a forum and associating a forum to a group

--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -12,7 +12,7 @@
       .form-group
         label.col-sm-2.control-label(for='associationName') #{t('forum.form.associationName.label')}
         div.col-sm-10
-          input.form-control(type='text', id='associationName', name='associationName', value=forum.associationName, placeholder=t('forum.form.associationName.placeholder'), validate='required')
+          input.form-control(type='text', id='associationName', name='associationName', value=forum.associationId, placeholder=t('forum.form.associationName.placeholder'), validate='required')
       .form-group
         label.col-sm-2.control-label(for='creationReason') #{t('forum.form.creationReason.label')}
         div.col-sm-10
