--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -7,16 +7,15 @@
       .form-group
         label.col-sm-2.control-label(for='associationName') #{t('forum.form.associationName.label')}
         div.col-sm-10
-          input.form-control(type='text', id='associationName', name='associationName',value=forum ? forum.associationName : '', placeholder=t('forum.form.associationName.placeholder'), validate='required')
+          input.form-control(type='text', id='associationName', name='associationName', placeholder=t('forum.form.associationName.placeholder'), validate='required')
+          div.col-sm-10
+          input.form-control(type='hidden', id='associationId', name='associationId', placeholder=t('forum.form.associationId.placeholder'), validate='required')
+      div.uploadJustificatory   
       .form-group
         label.col-sm-2.control-label(for='creationReason') #{t('forum.form.creationReason.label')}
         div.col-sm-10
-          textarea.form-control( id='creationReason', name='creationReason', placeholder=t('forum.form.creationReason.placeholder'), validate='required')= forum ? forum.creationReason : ''
-      .form-group
-        label.col-sm-2.control-label(for='justificatory') #{t('forum.form.justificatory')}  
-        div.col-sm-10
-          input.form-control(type='hidden', id='justificatory', name='justificatory', value=forum ? forum.justificatoryUrl : '')
-          div.uploadJustificatory 
+          textarea.form-control( id='creationReason', name='creationReason', placeholder=t('forum.form.creationReason.placeholder'), validate='required')= forum ? forum.creationReason : ''   
+          input.form-control(type='hidden', id='justificatory', name='justificatory') 
       .form-group
         label.col-sm-2.control-label(for='title') #{t('forum.form.title.label')}
         div.col-sm-10
