Editing Forum with group and  adding some style to group creation and edition

--- a/lib/system/groups/styles.styl
+++ b/lib/system/groups/styles.styl
@@ -38,7 +38,7 @@
     text-overflow ellipsis
     overflow hidden
     cursor default
-.actions
+.Groupactions
   float right!important
 .deleteButton
   background-color transparent
@@ -92,5 +92,17 @@
 #nullInput
   border 1px solid red
 
-
-      
+.usersdisplays{
+    padding-left: 150px
+  }
+   @media screen and (min-width: 769px ) and (max-width: 1200px) {
+  .usersdisplays{
+    padding-left: 120px
+  }
+  }  
+  @media screen and (max-width: 768px) {
+  .usersdisplays{
+    padding-left: 0px
+  }
+  }
+    
