GroupView page with related forums

--- a/lib/system/forums/styles.styl
+++ b/lib/system/forums/styles.styl
@@ -26,3 +26,13 @@
 
       .mobile
         display inline
+.form-messages
+  .msg
+    color darken(#27ae60, 50%)
+    border-color #27ae60
+    background-color lighten(#27ae60, 70%)
+    padding: 20px 0px 20px 35px
+    width: 40%
+    border-radius: 8px
+    list-style-type: none
+    margin: auto
