Showing forums by visibility in groupView and adding description to group model

--- a/lib/system/groups/styles.styl
+++ b/lib/system/groups/styles.styl
@@ -173,3 +173,24 @@ forum_card_border = 1px solid rgba(255, 255, 255, 0.5)
   height 250px
   text-align center
   }
+  .group-title {
+    text-align center
+    }
+  .group-infos {
+    display flex
+    }
+  .group-description {
+    padding 50px
+    } 
+  .group-users-title {
+    padding 20px
+    }  
+  @media screen and (max-width: 995px)  {
+  .group-infos{
+    display block
+  } 
+  .group-description {
+    padding 0
+    padding-top 10px
+    }   
+  }   
