some improvement on home page

--- a/lib/admin/admin-general/styles.styl
+++ b/lib/admin/admin-general/styles.styl
@@ -12,5 +12,8 @@
   .commands
       width 70%
       padding-left 35%  
+  #creationReason    
+    height 100px
+    resize none
 
   @import '../../forum/topicsAttrs/styles'
