--- a/lib/system/groups/styles.styl
+++ b/lib/system/groups/styles.styl
@@ -194,3 +194,7 @@ forum_card_border = 1px solid rgba(255, 255, 255, 0.5)
     padding-top 10px
     }   
   }   
+ #description {
+   height 100px
+   resize none
+   } 
