:construction: WIP Merge branch 'master' into alt/agora-dev

--- a/lib/site/topic-layout/topic-article/cause/styles.styl
+++ b/lib/site/topic-layout/topic-article/cause/styles.styl
@@ -5,5 +5,28 @@
 
   .btn
     width: 100%
+    i
+      vertical-align: middle
+      position: relative
+      top: -2px
+
   .results-total
     padding-top 15px
+
+  .voted-box
+    .alert-voted
+      display: flex
+      justify-content: center
+      align-items: center
+
+      .bold
+        font-weight: bold
+
+      .black
+        color: #000
+
+      .thanks
+        margin: 0 10px
+
+    .chosen-answer
+      text-align: center
