--- a/lib/site/topic-layout/topic-article/styles.styl
+++ b/lib/site/topic-layout/topic-article/styles.styl
@@ -15,6 +15,7 @@
   @import './slider/styles'
   @import './hierarchy/styles'
   @import './change-vote-button/styles'
+  @import './required/styles'
 
   hr
     font-size 15px
