--- a/lib/site/topic-layout/topic-article/hierarchy/styles.styl
+++ b/lib/site/topic-layout/topic-article/hierarchy/styles.styl
@@ -1,4 +1,22 @@
 .topics-hierarchy {
+  .voted-box {
+    .alert-voted {
+      display: flex
+      justify-content: center
+      align-items: center
+
+      .bold {
+        font-weight: bold
+      }
+      .black {
+        color: #000
+      }
+      .thanks {
+        margin: 0 10px
+      }
+    }
+  }
+
   .sortable-li, .voted-li, .result-voted-li {
     background-color: #fff;
     border-bottom: 1px solid #efefef;
@@ -30,5 +48,18 @@
     border: 1px solid #efefef;
     border-radius: 3px;
   }
-}
 
+  .btn-answer {
+    padding-left: 0
+    margin-bottom: 20px
+  }
+
+  .answer-ol {
+    background-color: #FFF
+    .answer-li {
+      height: 60px
+      line-height: 60px
+      text-align: center
+    }
+  }
+}
