Group search with autocompletion

--- a/lib/admin/admin-general/template.jade
+++ b/lib/admin/admin-general/template.jade
@@ -15,7 +15,8 @@
           input.form-control(type='text', id='associationName', name='associationName', placeholder=t('forum.form.associationName.placeholder'), validate='required')
           div.col-sm-10
           input.form-control(type='hidden', id='associationId', name='associationId', value=forum.associationId, placeholder=t('forum.form.associationId.placeholder'), validate='required')
-      div.uploadJustificatory 
+          div.search
+      div.uploadJustificatory
       .form-group
         label.col-sm-2.control-label(for='creationReason') #{t('forum.form.creationReason.label')}
         div.col-sm-10
