--- a/lib/system/forums/form.jade
+++ b/lib/system/forums/form.jade
@@ -9,6 +9,7 @@
         div.col-sm-10
           input.form-control(type='text', id='associationName', name='associationName', placeholder=t('forum.form.associationName.placeholder'), validate='required')
           div.col-sm-10
+          div.search
           input.form-control(type='hidden', id='associationId', name='associationId', value=forum ? forum.associationId : '', placeholder=t('forum.form.associationId.placeholder'), validate='required')
       div.uploadJustificatory   
       .form-group
